--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,9 @@
         "symfony/string": "7.3.*",
         "symfony/translation": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
+        "symfony/ux-icons": "^2.31",
         "symfony/ux-turbo": "^2.31",
+        "symfony/ux-twig-component": "^2.31",
         "symfony/validator": "7.3.*",
         "symfony/web-link": "7.3.*",
         "symfony/yaml": "7.3.*",
